Time model_stoch_vol
Most of time is in burn_in_step and full_sample.

--- a/pyfolio/examples/bayesian.ipynb
+++ b/pyfolio/examples/bayesian.ipynb
@@ -297,6 +297,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time to run priors was 2.310 seconds.\n",
+      "Time to run T was 0.234 seconds.\n",
+      "Time to run find_MAP was 3.568 seconds.\n",
+      "Time to run burn_in_step was 18.514 seconds.\n",
+      "Time to run burn_in_sample was 8.043 seconds.\n",
+      "Time to run full_step was 3.927 seconds.\n",
+      "Time to run full_sample was 74.848 seconds.\n",
+      "('total_time', 111.44399690628052)\n",
+      "('priors', 2.3102498054504395)\n",
+      "('full_step', 3.927027940750122)\n",
+      "('find_MAP', 3.5679681301116943)\n",
+      "('full_sample', 74.8478090763092)\n",
+      "('T', 0.23401904106140137)\n",
+      "('burn_in_sample', 8.043129920959473)\n",
+      "('burn_in_step', 18.51367998123169)\n"
+     ]
+    }
+   ],
+   "source": [
+    "trace = pf.bayesian.model_stoch_vol(stock_rets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "858"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock_rets.size"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
